# jazz2-native

./: .editorconfig  .gitignore  BuildAndroid.sh  BuildAndroidDebugFromRelease.sh  BuildAndroidSign.sh  BuildAndroid_x86-64.sh  BuildEmscripten.sh  BuildEmscriptenDemo.sh  BuildImgui.bat  BuildLinuxClang.sh  BuildLinuxGcc.sh  BuildLinuxGcc_SDL2.sh  BuildLinuxGcc_Sdl.sh  BuildUwp.bat  BuildUwpSdl.bat  CMakeLists.txt  CMakeSettings.json  Info.plist.in  Jazz2.sln  LICENSE  Package.appxmanifest.in  README.md  VC-LTL helper for Visual Studio.props
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android.yml  docs.yml  emscripten.yml  linux.yml  linux_cc.yml  linux_legacy.yml  linux_legacy.yml_  macos.yml  switch.yml  uwp.yml  windows.yml  windows_clang.yml  windows_sln.yml  windows_v143.yml  windows_vs2022.yml
Content/Animations/: Main.palette  main_menu.layer
Content/Translations/: cs.mo  cs.po  de.mo  de.po  es.mo  es.po  fr.mo  fr.po  gl.mo  gl.po  hu.mo  hu.po  it.mo  it.po  nb.mo  nb.po  nl.mo  nl.po  pl.mo  pl.po  pt.mo  pt.po  pt_BR.mo  pt_BR.po  ro.mo  ro.po  ru.mo  ru.po  tr.mo  tr.po  ua.mo  ua.po
Docs/: Building.dox  CommonBase.dox  Config.py  Death.dox  Doxyfile  Namespaces.Death.dox  Namespaces.dox  ThirdParty.dox  angelscript.tag  conf.py
Docs/Snippets/: ServerConfiguration.json
Jazz2/: Common.h  Jazz2.vcxproj  Jazz2.vcxproj.filters  Main.cpp  Resources.rc
Jazz2/Jazz2/: ActorBase.cpp  ActorBase.h  AnimState.h  ContentResolver.Shaders.h  ContentResolver.cpp  ContentResolver.h  EventType.h  ILevelHandler.h  IRootController.h  IStateHandler.h  LevelHandler.cpp  LevelHandler.h  LevelInitialization.h  PlayerActions.h  PreferencesCache.cpp  PreferencesCache.h  WeatherType.h
Jazz2/nCine/: AppConfiguration.cpp  AppConfiguration.h  Application.cpp  Application.h  ArrayIndexer.cpp  ArrayIndexer.h  CommonHeaders.h  IAppEventHandler.h  NuklearContext.cpp  PCApplication.cpp  PCApplication.h  Qt5Widget.cpp  Qt5Widget.h  ServiceLocator.cpp  ServiceLocator.h  tracy_memory.cpp
Libs/Includes/: qoi.h
Shared/: Array.h  ArrayView.h  Common.h  CommonInternal.h  Environment.cpp  Environment.h  HttpRequest.h  SmallVector.cpp  SmallVector.h  Utf8.cpp  Utf8.h
Shared/Containers/: Array.h  ArrayView.h  GrowableArray.h  Pair.h  SmallVector.h  String.cpp  String.h  StringView.cpp  StringView.h
Sources/: App.manifest  AppRun  Common.h  Info.plist.in  Jazz2.vcxproj  Jazz2.vcxproj.filters  Main.cpp  Main.h  Package.appxmanifest.in  Resources.h  Resources.rc  Resources.rc.in  TermLogo.h  project.desktop  project.metainfo.xml
Sources/Jazz2/: AnimState.h  AnimationLoopMode.h  ContentResolver.Shaders.h  ContentResolver.cpp  ContentResolver.h  Direction.h  EventType.h  ExitType.h  GameDifficulty.h  ILevelHandler.h  IResumable.h  IRootController.h  IStateHandler.h  LevelDescriptor.h  LevelFlags.h  LevelHandler.cpp  LevelHandler.h  LevelInitialization.cpp  LevelInitialization.h  LightEmitter.h  PitType.h  PlayerAction.h  PlayerActions.h  PlayerType.h  PlayerViewport.cpp  PlayerViewport.h  PreferencesCache.cpp  PreferencesCache.h  Resources.cpp  Resources.h  RumbleDescription.h  (+7 more)
Sources/ShaderCompiler/: CMakeLists.txt  ConstFold.cpp  ConstFold.h  Emit.cpp  Emit.h  Essl100.cpp  Essl100.h  GenerateAll.ps1  GlslAst.h  GlslReflect.cpp  GlslReflect.h  GlslToCpp.cpp  GlslToCpp.h  GlslTypedAst.h  Hlsl.cpp  Hlsl.h  Main.cpp  README.md  RuntimeShader.cpp  RuntimeShader.h  ShaderCompiler.vcxproj  ShaderCompilerMain.cpp  ShaderParser.cpp  ShaderParser.h  Trace.cpp  Vulkan.cpp  Vulkan.h
Sources/ShaderCompiler/tests/: Attribute.shader  BatchedSprites.shader  CanvasInitBraced.shader  CanvasInitCompare.shader  CanvasInitCompound.shader  CanvasInitDead.shader  CanvasInitIfdef.shader  CanvasInitPartialWrite.shader  CanvasInitReadFirst.shader  CanvasInitReturn.shader  CanvasTinted.shader  CanvasVertex.shader  ConstFold.shader  CustomWave.shader  DeadFunctions.shader  EarlyReturn.shader  ImplicitTexture.shader  IncludeShared.shader  MultiOutput.shader  PrecisionHighp.shader  RunTests.ps1  Sprite.shader  StageGuards.shader  SwVarying.shader  TexturePassthrough.shader  TexturedBackground.shader  TileMap.shader  UniformTrim.shader  UniformTrimBatched.shader  VaryingDemote.shader  VaryingTrim.shader
Sources/ShaderCompiler/tests/errors/: FragColorInBody.shader  PrecisionInvalid.shader  StageIfDefined.shader  VertexEarlyReturn.shader
Sources/ShaderCompiler/tests/essl100/: Textured.shader  VaryingEarlyReturn.shader
Sources/ShaderCompiler/tests/expected/: Attribute.check.txt  BatchedSprites.check.txt  CanvasInitBraced.check.txt  CanvasInitCompare.check.txt  CanvasInitCompound.check.txt  CanvasInitDead.check.txt  CanvasInitIfdef.check.txt  CanvasInitPartialWrite.check.txt  CanvasInitReadFirst.check.txt  CanvasInitReturn.check.txt  CanvasTinted.check.txt  CanvasVertex.check.txt  ConstFold.check.txt  CustomWave.check.txt  DeadFunctions.check.txt  EarlyReturn.check.txt  ImplicitTexture.check.txt  IncludeShared.check.txt  MultiOutput.check.txt  PrecisionHighp.check.txt  Sprite.check.txt  StageGuards.check.txt  SwVarying.check.txt  TexturePassthrough.check.txt  TexturedBackground.check.txt  TileMap.check.txt  UniformTrim.check.txt  UniformTrimBatched.check.txt  VaryingDemote.check.txt  VaryingTrim.check.txt
Sources/ShaderCompiler/tests/inc/: SpriteFragment.inc
Sources/backward/: CMakeLists.txt  backward.h
__web/: .htaccess
android/app/src/main/cpp/: CMakeLists.txt  jnicall_functions.cpp.in  main.cpp
cmake/: FindAngelscript.cmake  FindBackward.cmake  FindGLEW.cmake  FindGLFW.cmake  FindIXWebSocket.cmake  FindLz4.cmake  FindOpenAL.cmake  FindOpenGLES2.cmake  FindSDL2.cmake  FindVorbis.cmake  FindZstd.cmake  Findlibopenmpt.cmake  check_atomic.cmake  ncine_build_android.cmake  ncine_compiler_options.cmake  ncine_extra_sources.cmake  ncine_generated_sources.cmake  ncine_get_version.cmake  ncine_headers.cmake  ncine_helpers.cmake  ncine_imgui.cmake  ncine_imported_targets.cmake  ncine_installation.cmake  ncine_options.cmake  ncine_sources.cmake  ncine_strip_binaries.cmake
(+2208 files in other folders)
